--- a/src/comonents/Header/styles.scss
+++ b/src/comonents/Header/styles.scss
@@ -7,18 +7,36 @@
     height: 100%;
     max-width: 1450px;
     margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
 
     .logo {
       width: 13.0rem;
-      position: absolute;
-      top: 50%;
-      left: 10px;
       transform: translateY(-50);
 
       img {
         display: block;
         width: 100%;
         margin: 0;
+      }
+    }
+    .callActions {
+      ul, li {
+        margin: 0;
+        padding: 0;
+      }
+
+      li {
+        list-style: none;
+        a {
+          font-size: 1.8rem;
+          line-height: 1;
+          color: black;
+          text-decoration: none;
+          text-transform: uppercase;
+        }
       }
     }
   }
